fixed player name spacing

--- a/style.css
+++ b/style.css
@@ -118,6 +118,8 @@ justify-content: space-between;
     display: flex;
     font-size: 16px;    
     margin-top: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
     margin-bottom: 0px;
     overflow: hidden;
     width: 100px;
